fixes the imgs changing routes

--- a/src/index.html
+++ b/src/index.html
@@ -100,8 +100,8 @@
         id="cards-container"
       ></div>
     </div>
-    <audio src="/src/sounds/win.mp3" id="win"></audio>
-    <audio src="/src/sounds/fail.mp3" id="fail"></audio>
+    <audio src="/memory-cards-game/src/sounds/win.mp3" id="win"></audio>
+    <audio src="/memory-cards-game/src/sounds/fail.mp3" id="fail"></audio>
 
     <div
       class="modal"
